# redirector

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
redirector/: main.py  settings.py  spaces.py  utils.py
tests/: shared_data.py  test_endpoints.py  test_functions.py  test_redirector.py  test_statics.py
