[tool.poetry]
name = "redirector"
version = "1.0.1"
description = ""
authors = ["Derk Weijers <derk@weijers.xyz>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { extras = ["all"], version = "^0.78.0" }
boto3 = "^1.24.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
